plugins {
    id 'java'
    id 'org.graalvm.buildtools.native'
}

java {
    sourceCompatibility = 25
    targetCompatibility = 25
    toolchain {
        languageVersion = JavaLanguageVersion.of(25);
        vendor = JvmVendorSpec.ORACLE;
    }
}

group = 'org.kroj'
version = '1.0.0'

dependencies {
    implementation "io.netty:netty-all:4.2.15.Final"
    String[] natives = ['windows-x86_64', 'linux-x86_64', 'linux-aarch_64', 'osx-x86_64', 'osx-aarch_64']

    String boringSSL = "io.netty:netty-tcnative-boringssl-static:2.0.77.Final"
    implementation("$boringSSL")

    for (String nat : natives) {
        implementation("$boringSSL:$nat")
    }

    implementation "org.msgpack:msgpack-core:0.9.12"
    implementation "org.msgpack:jackson-dataformat-msgpack:0.9.12" // Vulnerable
}

tasks.register("fatJar", Jar) {
    archiveFileName = "JVDM-Core-CLI.jar"
    manifest {
        attributes "Main-Class": "org.Kroj.Core.Network.Download.Manager"
    }
    archiveClassifier = "all"
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    with jar
}

graalvmNative {
    metadataRepository {
        enabled = true
    }
    binaries {
        main {
            imageName = 'JVDM'
            mainClass = "org.Kroj.Core.Network.Download.Manager"
            debug = false
            verbose = true
            fallback = false
            sharedLibrary = false
            quickBuild = false
            richOutput = true
            useFatJar = false

//            buildArgs.add()
            buildArgs.add('-H:+UnlockExperimentalVMOptions')
            buildArgs.add('-H:IncludeResources=.*')
//            buildArgs.add('--enable-native-access=ALL-UNNAMED')
            buildArgs.add('--enable-url-protocols=http,https')
            buildArgs.add('--initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslEngine')
            buildArgs.add('--initialize-at-run-time=io.netty.internal.tcnative.CertificateVerifier')
            buildArgs.add('--initialize-at-run-time=io.netty.internal.tcnative.SSLPrivateKeyMethod')
            buildArgs.add('--initialize-at-run-time=io.netty.internal.tcnative.CertificateCompressionAlgo')
            buildArgs.add('--initialize-at-run-time=io.netty.internal.tcnative.AsyncSSLPrivateKeyMethod')
            buildArgs.add('--initialize-at-run-time=io.netty.internal.tcnative.SSL')
            buildArgs.add('--initialize-at-run-time=io.netty.internal.tcnative.SSLContext')
            buildArgs.add('--initialize-at-run-time=org.Kroj.Core.Network.Download.Security.TLS')

            // For Optimizations and more
//            jvmArgs.add()
//            runtimeArgs.add()
            // buildArgs.add('--pgo-instrument')
            // buildArgs.add('--pgo=default.iprof')

        }
    }

    agent {
        defaultMode = "standard"
        enabled = true

        trackReflectionMetadata = true

        metadataCopy {
            inputTaskNames.add("run")
            outputDirectories.add("src/main/resources/META-INF/native-image/org.kroj/UI/")
            mergeWithExisting = true
        }
    }
}